03-blue-green/02-blue-green-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-green
  labels:
    app: webapp
    status: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
      status: green
  template:
    metadata:
      labels:
        app: webapp
        status: green
    spec:
      containers:
        - name: webapp-color
          image: kodekloud/webapp-color:v2
          ports:
            - name: http
              containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-green
  labels:
    app: webapp
    status: green
spec:
  type: ClusterIP
  selector:
    app: webapp
    status: green
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
